k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-management
  labels:
    name: test-management
    app: test-management-tool
