k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: test-management
  labels:
    app: test-management-tool
    component: web
spec:
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: test-management-tool
      component: web
  template:
    metadata:
      labels:
        app: test-management-tool
        component: web
    spec:
      containers:
      - name: web
        image: yashdeokar59/testcase-managment-tool-web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          name: http
        volumeMounts:
        - name: uploads-storage
          mountPath: /app/uploads
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      volumes:
      - name: uploads-storage
        persistentVolumeClaim:
          claimName: uploads-pvc
